--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "portfolio",
-    "version": "1.0.0",
-    "description": "portfolio",
-    "main": "index.html",
-    "scripts": {
-        "sass": "node-sass --output-style expanded styles/styles.scss -o styles/styles.css",
-        "watch-sass": "node-sass -w --output-style expanded public/scss/main.scss -o public/css/",
-        "gulp": "gulp"
-    },
-    "author": "ashwinisurve",
-    "devDependencies": {
-        "browser-sync": "^2.26.14",
-        "gulp": "^4.0.2",
-        "gulp-concat": "^2.6.1",
-        "gulp-sass": "^4.1.0",
-        "node-sass": "^5.0.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "latest",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
+  }
 }
